--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     background: linear-gradient(#fbc2eb, #a6c1ee) no-repeat;
+    background-attachment: fixed;
     min-height: 100vh;
     font-family: Raleway, sans-serif;
     color: rgb(66,66,66);
